Causeview Package Complete/src/objects/Gift_Aid_Declaration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>If ( 
AND( 
Donor__r.Data_complete_for_Gift_Aid__c = TRUE, 
OR( 
AND( Effective_Date__c &lt;= Today(), ISBLANK( End_Date__c )), 
AND(Effective_Date__c &lt;= Today(), End_Date__c &gt;= Today()) 
)), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <label>Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gift-Aid Declarations</relationshipLabel>
        <relationshipName>Gift_Aid_Declarations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Fiscal_Date__c</fullName>
        <defaultValue>If(month(Today())&lt; $Setup.App_Settings__c.Fiscal_Start_Month__c ,
 DATE(Year(Today()),$Setup.App_Settings__c.Fiscal_Start_Month__c,01), 
DATE(Year(Today())+1,$Setup.App_Settings__c.Fiscal_Start_Month__c,01))</defaultValue>
        <label>Next Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Donor__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>This donation, and all future &amp; historic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>This donation, and all future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This donation only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gift-Aid Declaration</label>
    <nameField>
        <displayFormat>G-Aid-{000000000}</displayFormat>
        <label>Gift-Aid Declaration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift-Aid Declarations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>